test/rewriter/errors/pat_anti_quotation_payload.ml
let invalid_anti_quotation_pattern = function
  | [%yojson? [%y `Int _a]] -> false
  | _ -> true
